package Hackers_Project;

message program_data {
  required string name = 1;
  enum effect_type {
      attack  = 0;
      analyze = 1;
      crypt = 2;
      detect = 3;
      deceive = 4;
      decoy = 5;
      decrypt = 6;
      evaluate = 7;
      medic = 8;
      relocate = 9;
      scan = 10;
      shield = 11;
      slow = 12;
      virus = 13;
      weaken = 14;
  }
  message effect {
      required effect_type effect = 1;
      required int32 val = 2;
  }
  repeated effect effects = 2;
  required int32 size = 3;
  required int32 range = 4;
}
